--- a/content/index.ipynb
+++ b/content/index.ipynb
@@ -13,7 +13,7 @@
    "id": "1f7260c8",
    "metadata": {},
    "source": [
-    "## Paper examples \n",
+    "## Paper benchmarks \n",
     "The following benchmark examples are considered to generate the numerical results for the paper [Neunteufel, Schöberl. The Hellan-Herrmann-Johnson and TDNNS methods for linear and nonlinear shells].\n",
     "\n",
     "### Nonlinear Koiter and linear Kirchhoff-Love shells\n",
@@ -44,12 +44,12 @@
     "We collect and present additional benchmark examples.\n",
     "### Nonlinear Koiter and linear Kirchhoff-Love shells\n",
     "\n",
-    "* [Cantilever subjected to end moment](cantilever_shear_force_hhj.ipynb)\n",
+    "* [Cantilever subjected to end shear force](cantilever_shear_force_hhj.ipynb)\n",
     "* [Plate stiffener](plate_stiffener_hhj.ipynb)\n",
     "\n",
     "### Nonlinear Naghdi and linear Reissner-Mindlin shells\n",
     "\n",
-    "* [Cantilever subjected to end moment](cantilever_shear_force_tdnns.ipynb)\n",
+    "* [Cantilever subjected to end shear force](cantilever_shear_force_tdnns.ipynb)\n",
     "* [Plate stiffener](plate_stiffener_tdnns.ipynb)"
    ]
   },
