--- a/content/pinched_cylinder_hhj.ipynb
+++ b/content/pinched_cylinder_hhj.ipynb
@@ -350,7 +350,7 @@
     "            gf_solution,\n",
     "            inverse=\"sparsecholesky\",\n",
     "            dampfactor=0.1 if steps < 16 else 0.25,\n",
-    "            printing=True,\n",
+    "            printing=False,\n",
     "            maxerr=1e-5,\n",
     "            maxit=100,\n",
     "        )\n",
