--- a/content/pinched_cylinder_tdnns.ipynb
+++ b/content/pinched_cylinder_tdnns.ipynb
@@ -43,7 +43,7 @@
     "geom = meshing.SurfaceGeometry(mapping)\n",
     "# nx, ny = 16, 32\n",
     "mesh = Mesh(\n",
-    "    geom.GenerateMesh(quads=True, nx=32, ny=32, bbbpts=[[0, 0, r]], bbbnames=[\"force\"])\n",
+    "    geom.GenerateMesh(quads=True, nx=16, ny=16, bbbpts=[[0, 0, r]], bbbnames=[\"force\"])\n",
     ")\n",
     "Draw(mesh);"
    ]
@@ -277,7 +277,7 @@
     "        + hyb * cnv\n",
     "        + (PseudoInverse(Ftau, nv).trans * gamma) * cnv_def\n",
     "    )\n",
-    "    * (m * cnv * cnv)\n",
+    "    * m[cnv, cnv]\n",
     "    * ds(element_boundary=True)\n",
     ").Compile()\n",
     "# Shear energy\n",
@@ -367,7 +367,7 @@
     "            gf_solution,\n",
     "            inverse=\"sparsecholesky\",\n",
     "            dampfactor=0.1 if steps < 16 else 0.25,\n",
-    "            printing=True,\n",
+    "            printing=False,\n",
     "            maxerr=1e-5,\n",
     "            maxit=100,\n",
     "        )\n",
