--- a/content/slit_annular_plate_hhj.ipynb
+++ b/content/slit_annular_plate_hhj.ipynb
@@ -274,7 +274,7 @@
     "        - acos(cnv * cf_averaged_nv_init_norm)\n",
     "        + hyb * cnv\n",
     "    )\n",
-    "    * (m * cnv * cnv)\n",
+    "    * m[cnv, cnv]\n",
     "    * ds(element_boundary=True)\n",
     ").Compile()\n",
     "\n",
