--- a/content/plate_stiffener_tdnns.ipynb
+++ b/content/plate_stiffener_tdnns.ipynb
@@ -302,7 +302,7 @@
     "        + hyb * cnv\n",
     "        + (PseudoInverse(Ftau, nv).trans * gamma) * cnv_def\n",
     "    )\n",
-    "    * (m * cnv * cnv)\n",
+    "    * m[cnv, cnv]\n",
     "    * ds(element_boundary=True)\n",
     ").Compile()\n",
     "# Shear energy\n",
